--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
   "dependencies": {
     "@ant-design/cssinjs": "^1.22.0",
     "@ant-design/icons": "^5.5.1",
+    "@ant-design/pro-components": "^2.8.6",
     "@tanstack/react-query": "^5.61.3",
     "@tanstack/react-query-devtools": "^5.61.3",
     "antd": "^5.22.2",
+    "axios": "^1.8.4",
     "clsx": "^2.1.1",
+    "crypto-js": "^4.2.0",
     "dayjs": "^1.11.13",
     "echarts": "^5.5.1",
     "framer-motion": "^11.11.17",
@@ -33,6 +36,7 @@
   "devDependencies": {
     "@eslint/js": "^9.15.0",
     "@svgr/plugin-svgo": "^8.1.0",
+    "@types/crypto-js": "^4.2.2",
     "@types/node": "^22.9.3",
     "@types/nprogress": "^0.2.3",
     "@types/react": "^18.3.12",
