--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^6.28.0",
     "tailwind-merge": "^2.5.5",
+    "xlsx": "^0.18.5",
     "zustand": "^5.0.1"
   },
   "devDependencies": {
