--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@ant-design/cssinjs": "^1.22.0",
     "@ant-design/icons": "^5.5.1",
+    "@ant-design/plots": "^2.3.3",
     "@ant-design/pro-components": "^2.8.6",
     "@tanstack/react-query": "^5.61.3",
     "@tanstack/react-query-devtools": "^5.61.3",
