--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "dayjs": "^1.11.13",
     "echarts": "^5.5.1",
     "framer-motion": "^11.11.17",
+    "moment": "^2.30.1",
     "nprogress": "^0.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
