--- a/package.json
+++ b/package.json
@@ -29,11 +29,14 @@
     "moment": "^2.30.1",
     "nprogress": "^0.2.0",
     "react": "^18.3.1",
+    "react-countup": "^6.5.3",
     "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.5",
     "react-icons": "^5.5.0",
+    "react-responsive": "^10.0.1",
     "react-router-dom": "^6.28.0",
     "tailwind-merge": "^2.5.5",
+    "tdesign-react": "^1.12.1",
     "xlsx": "^0.18.5",
     "zustand": "^5.0.1"
   },
