--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@ant-design/charts": "^2.3.0",
     "@ant-design/cssinjs": "^1.22.0",
     "@ant-design/icons": "^5.5.1",
     "@ant-design/plots": "^2.3.3",
@@ -24,7 +25,7 @@
     "clsx": "^2.1.1",
     "crypto-js": "^4.2.0",
     "dayjs": "^1.11.13",
-    "echarts": "^5.5.1",
+    "echarts": "^5.6.0",
     "framer-motion": "^11.11.17",
     "moment": "^2.30.1",
     "nprogress": "^0.2.0",
